Добавить создание участников команд
