# swagger.json
@@ -1706,17 +1706,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/SpecBox.WebApi.Model.Teams.TeamUserResponse"
+                  "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.OkResult"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/SpecBox.WebApi.Model.Teams.TeamUserResponse"
+                  "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.OkResult"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/SpecBox.WebApi.Model.Teams.TeamUserResponse"
+                  "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.OkResult"
                 }
               }
             }
@@ -2436,6 +2436,16 @@
   },
   "components": {
     "schemas": {
+      "Microsoft.AspNetCore.Mvc.OkResult": {
+        "type": "object",
+        "properties": {
+          "statusCode": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
       "Microsoft.AspNetCore.Mvc.ProblemDetails": {
         "type": "object",
         "properties": {
